manifests/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
  labels:
    app: app1
spec:
  selector:
    app: app1
  ports:
    - name: http
      port: 3000
      targetPort: 3000
