manifests/app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2
  labels:
    app: app2
spec:
  selector:
    app: app2
  ports:
    - name: http
      port: 3002
      targetPort: 3002
